[package]
name = "poker-landlord-rs"
version = "0.1.0"
edition = "2024"
description = "A command-line Dou Dizhu (Landlord) game implemented in Rust"
license = "MIT"
repository = "https://github.com/zuihate/poker-landlord-rs"
keywords = ["game", "card", "landlord", "dou-dizhu"]

[dependencies]
dotenv = "0.15.0"
rand = "0.8"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
